--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -22,6 +22,18 @@
                 <li><button class="btn-primary">hire me</button></li>
             </ul>
         </nav>
+        <div class="banner">    
+            <div class="banner-content" >
+                <h3 class="banner-greeting">Hi, i am</h3>
+                <h1 class="banner-title">Mary hardy</h1>
+                <p>hot what able cold new see hold.Friendly as an betrayed formerly 
+                    he. Morning because as to society behaved moments.</p>
+                    <button class="btn-primary" >download cv</button>
+                    <button class="btn-primary">contract</button>
+          
+                </div>
+                <img class="profile pic" src="images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
