--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="banner-content" >
                 <h3 class="banner-greeting">Hi, i am</h3>
                 <h1 class="banner-title">Mary hardy</h1>
-                <p>hot what able cold new see hold.Friendly as an betrayed formerly 
+                <p class="banner-dris">hot what able cold new see hold.Friendly as an betrayed formerly 
                     he. Morning because as to society behaved moments.</p>
                     <button class="btn-primary" >download cv</button>
                     <button class="btn-primary">contract</button>
@@ -37,6 +37,14 @@
 
     </header>
     <main>
+        <section class="about" >
+            <h3 class="section-title">about me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean
+                 and slick websites that provide real value to the end user. Thousands of clients have procured
+                  exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+        </section>
 
     </main>
     <footer>
