--- a/index.html
+++ b/index.html
@@ -44,6 +44,27 @@
                  and slick websites that provide real value to the end user. Thousands of clients have procured
                   exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
             </p>
+           <div class="about-info-container">
+               <!-- .about-info*4>h4.info-title+p.info-description -->
+               <div class="about-info">
+                   <h4 class="info-title">Name:</h4>
+                   <p class="info-s-description">Mary hardy</p>
+               </div>
+               <div class="about-info">
+                   <h4 class="info-title">Email:</h4>
+                   <p class="info-s-description">info@gmail.com</p>
+               </div>
+               <div class="about-info">
+                   <h4 class="info-title">Date of birth</h4>
+                   <p class="info-s-description">11 november 1987</p>
+               </div>
+               <div class="about-info">
+                   <h4 class="info-title">from</h4>
+                   <p class="info-s-description">los angels ,usa</p>
+               </div>
+
+
+           </div>
         </section>
 
     </main>
