added all skills

--- a/index.html
+++ b/index.html
@@ -66,6 +66,38 @@
 
            </div>
         </section>
+        <!-- what i do -->
+        <section>
+            <h3 class="sectionimage.pngv-title">what i do?</h3>
+            <p id="what-i-do-description" class="section-desciption">
+                i have more then 5 year experience.building sofware for clients
+                all over the world.below is a quick overview of my main technical skill sets and technologies
+                i use.went to find out more about my experience?check out my online resume and project portfolio.
+
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">vanila javascipt</h3>
+                    <p class="skill-description">list skill/technologies here.you can change the 1500+ fontawesome5 free  icon available.aeneam commodo ligula aget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">react</h3>
+                    <p class="skill-description">list skill/technologies here.you can change the 1500+ fontawesome 5 free icon a available aemeam commodo ligula aget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">note js</h3>
+                    <p class="skill-description">list skill techologies here .you can change the icon above to any of the 1500+ fontawesome 5 free icon available.commodo ligula aget dolor</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">list skill technologies here.ypu can change the icon 1500+ fontawesome 5 free icon available commodo ligula eget dollor</p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
