--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
     </header>
-    <main>
+                                                                                                             h<main>
         <section class="about" >
             <h3 class="section-title">about me</h3>
             <p class="section-description">
@@ -150,7 +150,7 @@
                     </div>
                     <hr>
                    
-                    <div class="resume-item">
+                    <div class="resume-item"b>
                         <h2 class="resume-item-title">Master in computer Engineering</h2>
                         <h3 class="resume-item-institute">harvard university / 2015 - 2017</h3>
                         <p class="resume-item-description">list skill technologies here.you can change the icon 1500+ fontawesome 5 free icon available commodo ligula eget dolor</p>
@@ -162,6 +162,9 @@
 
 
             </div>
+            <div class="download-CV">
+                <button class="btn-primary">Download CV</button>
+            </div>
 
 
 
@@ -169,6 +172,21 @@
 
     </main>
     <footer>
+        <div class="footer-column">
+            <h3 class="section-title">Lets connect</h3>
+            <p class="section-description">
+                please fill out the form on this secton to contract with me or call between
+                9:00 A.M AND 8:00 P.M et,monday though friday
+            </p>
+            <div class="social-link">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">let's massage me</h3>
+        </div>
         
     </footer>
 </body>
