--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">let's massage me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="your name">
+                <input type="email" name="" placeholder="your email" id="">
+                <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="submit">
+            </form>
         </div>
         
     </footer>
