--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">let's massage me</h3>
+            <h3 class="section-title">let's massage me right now</h3>
             <form class="contact" action="">
                 <input type="text" placeholder="your name">
                 <input type="email" name="" placeholder="your email" id="">
